# dataflow_config

./: .replit  main.py  pyproject.toml  replit.md  web_ui.py
attached_assets/: Pasted-Certainly-Here-is-a-more-detailed-explanation-of-your-DataFlow-xLerate-project-elaborating-on--1755671954265_1755671954267.txt  api_driver_1759127363326.md  cassandra_driver_1759127363327.md  csv_driver_1759127344620.md  custom_data_format_driver_1759127344629.md  custom_store_driver_1759127363328.md  delta_driver_1759127344630.md  excel_driver_1759127344630.md  json_driver_1759127344631.md  parquet_driver_1759127344632.md  schema_evolution_1759127373176.md  snowflake_store_driver_1759127363330.md  soap_driver_1759127363331.md  xml_driver_1759127344633.md
config/: example_pipeline.yaml
data/csv_output/: customers.csv  users.csv
data/parquet_output/: order_items.parquet  orders.parquet
dataflow_xlerate/: __init__.py  cli.py
dataflow_xlerate/config/: __init__.py  parser.py  validator.py
dataflow_xlerate/core/: __init__.py  engine.py  pipeline.py
dataflow_xlerate/logging/: __init__.py  logger.py
dataflow_xlerate/stores/: __init__.py  base.py  filesystem.py  jdbc.py
dataflow_xlerate/transformations/: __init__.py  base.py  basic.py
dataflow_xlerate/utils/: __init__.py  helpers.py
logs/: .gitkeep
static/: app.js
templates/: index.html
